# DeepLearningSystem_CMU10414

./: .gitignore  CMakeLists.txt  Readme.md  training.ipynb
apps/: mlp_resnet.py  moe_mnist.py  pt_mlp_resnet.py  pt_moe_mnist.py  simple_ml.py  train_cifar10.py  visualize_compare.py
hw0/: Makefile  hw0.ipynb
hw0/src/: simple_ml.py  simple_ml_ext.cpp  simple_ml_ext.pyd  simple_ml_ext.pyd.bak
hw0/tests/: test_simple_ml.py
hw1/: hw1.ipynb
hw1/apps/: simple_ml.py
hw1/python/needle/: autograd.py
hw1/python/needle/ops/: ops_mathematic.py
hw1/tests/hw1/: test_autograd_hw.py
hw2/: README.md  hw2.ipynb
hw2/apps/: mlp_resnet.py
hw2/python/needle/: autograd.py  optim.py
hw2/python/needle/data/: data_basic.py  data_transforms.py
hw2/python/needle/init/: init_initializers.py
hw2/python/needle/nn/: nn_basic.py
hw2/python/needle/ops/: ops_logarithmic.py  ops_mathematic.py
hw3/: hw3.ipynb
hw3/python/needle/backend_ndarray/: ndarray.py
hw3/python/needle/data/: data_basic.py
hw3/src/: ndarray_backend_cpu.cc  ndarray_backend_cuda.cu
hw4/: hw4 for colab.ipynb  hw4.ipynb  train_cifar10.py
hw4/apps/: models.py  simple_ml.py  single_script.py
hw4/python/needle/: autograd.py  backend_selection.py  optim.py
hw4/python/needle/backend_ndarray/: ndarray.py
hw4/python/needle/init/: init_initializers.py
hw4/python/needle/nn/: nn_basic.py  nn_conv.py
hw4/python/needle/ops/: ops_logarithmic.py  ops_mathematic.py
hw4/src/: ndarray_backend_cpu.cc
hw4/tests/hw4/: test_conv.py
python/needle/: autograd.py  optim.py
python/needle/backend_ndarray/: ndarray.py  ndarray_backend_cpu.cp312-win_amd64.pyd
python/needle/data/: data_basic.py
python/needle/init/: init_basic.py
python/needle/nn/: nn_basic.py  nn_conv.py
python/needle/ops/: ops_logarithmic.py  ops_mathematic.py
src/: ndarray_backend_cpu.cc  ndarray_backend_cuda.cu
(+3 files in other folders)
